--- a/content/blog/coming-to-terms-with-adhd-part-2.org
+++ b/content/blog/coming-to-terms-with-adhd-part-2.org
@@ -36,8 +36,7 @@ fight it all the time. Do whatever you feel like every once in a while.
 It is very important to keep feeling happy. Trust yourself that you'll
 manage to get important things done in time. However, you need to
 build/earn this trust. Read my
-[[https://channikhabra.github.io/blog/coming-to-terms-with-adhd/][previous
-post]] for some tips on how I do it.
+[[/blog/coming-to-terms-with-adhd/][previous post]] for some tips on how I do it.
 
 When you find something you feel passionate about, the multiple trains
 of thought kinda all go in the same direction. They're all interesting,
