--- a/content/blog/debt-of-my-rebellion.org
+++ b/content/blog/debt-of-my-rebellion.org
@@ -4,15 +4,13 @@
 #+TITLE: Debt of my rebellion
 
 
-Most of my school life I was very confused, depressed perhaps. I was a
-"good boy", as they call those traumatized, obedient kids. Confusion
-started turning into frustration by the end of my 10th standard. It was
-the "board" class. Nonsensical pressure, corporal punishment and stupid
-as fuck rules had started turning my depression into anger. So much
-pressure was put on by that
-[[https://web.archive.org/web/20161117224135/http://channikhabra.github.io/2016/06/11/cost-of-being-a-rebel/sasacademy.com][bloody
-shithole of a school]] that one of my classmates had a mental breakdown.
-A guy went complete nuts. That was the final nail in the coffin.
+Most of my school life I was very confused, depressed perhaps. I was a "good
+boy", as they call those traumatized, obedient kids. Confusion started turning
+into frustration by the end of my 10th standard. It was the "board" class.
+Nonsensical pressure, corporal punishment and stupid as fuck rules had started
+turning my depression into anger. So much pressure was put on by that [[https://sasacademy.com][shithole
+of a school]] that one of my classmates had a mental breakdown. A guy went
+complete nuts. That was the final nail in the coffin.
 
 I felt like it was my turn next. So I rebelled. Against everything that
 didn't make sense to me. Unfortunate for me, one of the foes in my
@@ -32,13 +30,11 @@ was no need to go through all the frustration, frowned looks and grudges
 teach myself better, faster. Unfortunate side effect of this
 realization: I didn't need a shiny college.
 
-Not going to college however was not an option. My parents were giving
-me enough pain already for using computer too much (despite the fact
-that I was good at school AND helped at home and farm as well). So I
-went for admission in
-[[https://web.archive.org/web/20161117224135/http://dgc.edu.in/][one of
-those piece of shit colleges which let anyone in for a big some of
-money]]. Another story for another day.
+Not going to college however was not an option. My parents were giving me enough
+pain already for using computer too much (despite the fact that I was good at
+school AND helped at home and farm as well). So I went for admission in [[http://dgc.edu.in/][one of
+those piece of shit colleges which let anyone in for a big some of money]].
+Another story for another day.
 
 I could teach myself everything I needed. I was perhaps right about
 that. But there was nobody to tell me what to learn. By the time I got
