--- a/content/blog/stalemate.org
+++ b/content/blog/stalemate.org
@@ -95,7 +95,4 @@ my favour. Personally I don't want to quit. Reasons being I want to
 finish what I've started, for the sake of it.
 
 And I don't really have any savings to survive without work for more
-than a couple weeks. But if I can't produce results, I can't really ask
-James to place his bets on me again (yes, again;
-[[https://web.archive.org/web/20141015151208/http://channikhabra.github.io/2014/02/26/i-have-decided-to-do-a-job-where-they-will-exploit-shit-out-of-me/#comment-1262743983][he
-actually placed his bets on me last time]]).
+than a couple weeks. But if I can't produce results.
