--- a/content/talks/microservices-techblend.org
+++ b/content/talks/microservices-techblend.org
@@ -23,10 +23,7 @@ putting the slides over here.
 Feel free to hit me up if you need some help regarding microservices, or
 if you need me to explain some slide, or just for a chat.
 
-#+begin_html
-  <iframe src="//slides.com/channikhabra/microservices/embed?style=light" width="100%" height="420" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
-#+end_html
-
-#+begin_html
+#+begin_export html
+  <iframe src="//slides.com/bitspook/microservices/embed?style=light" width="100%" height="420" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
   </iframe>
-#+end_html
+#+end_export
