--- a/content/talks/react-redux-and-reactive-programming.org
+++ b/content/talks/react-redux-and-reactive-programming.org
@@ -2,13 +2,10 @@
 #+TITLE: React, Redux and Reactive programming
 
 
-#+begin_html
-  <iframe src="//slides.com/channikhabra/react-redux-and-reactive-programming/embed?style=light" width="100%" height="420" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
-#+end_html
-
-#+begin_html
+#+begin_export html
+  <iframe src="//slides.com/bitspook/react-redux-and-reactive-programming/embed?style=light" width="100%" height="420" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
   </iframe>
-#+end_html
+#+end_export
 
 #+begin_quote
   Building a React/Redux app with a twist of Reactive programming.
@@ -17,7 +14,8 @@
 My first time speaking at a big conference! It was a great experience.
 There is a video as well!
 
-{{< youtube "SFPF56BB1Cs" >}}
+#+begin_export html
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SFPF56BB1Cs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+#+end_export
 
-[[https://github.com/channikhabra/frp-with-rxjs-jschannel-conf][Transcript
-for this talk]] is available in its Github repository.
+[[https://github.com/bitspook/frp-with-rxjs-jschannel-conf][Transcript for this talk]] is available in its Github repository.
