--- a/content/talks/react-redux-workshop.org
+++ b/content/talks/react-redux-workshop.org
@@ -2,15 +2,11 @@
 #+TITLE: React/Redux Workshop
 
 
-#+begin_html
-  <iframe src="//slides.com/channikhabra/react-redux-workshop/embed?style=light" width="100%" height="420" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
+#+begin_export html
+  <iframe src="//slides.com/bitspook/react-redux-workshop/embed?style=light" width="100%" height="420" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
 #+end_html
-
-#+begin_html
   </iframe>
-#+end_html
+#+end_export
 
-React/Redux workshop I gave with
-[[https://www.meetup.com/Chandigarh-Programmers-Club/][Programmers' Club
-Chandigarh]] meetup group after seeing community's interest in these
-technologies.
+React/Redux workshop I gave with [[https://www.meetup.com/Chandigarh-Programmers-Club/][Programmers' Club Chandigarh]] meetup group after
+seeing community's interest in these technologies.
