--- a/content/talks/secure-software-teams-trantor.org
+++ b/content/talks/secure-software-teams-trantor.org
@@ -3,13 +3,10 @@
 #+TITLE: Secure Software Teams Trantor
 
 
-#+begin_html
-  <iframe src="//slides.com/channikhabra/secure-software-teams/embed?style=light" width="100%" height="420" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
-#+end_html
-
-#+begin_html
+#+begin_export html
+  <iframe src="//slides.com/bitspook/secure-software-teams/embed?style=light" width="100%" height="420" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
   </iframe>
-#+end_html
+#+end_export
 
 I gave this talk in one of internal sessions at Trantor. Goal was to
 acquaint one of our software teams into the world of application
